force-app/main/metadata/objects/Doc_Source__c/Doc_Source__c.object-meta.xml
<CustomObject>
    <description>Configuration for remote documentation sources in Docs Unlocked. Each record maps an app to a repository and content path from a supported provider (GitHub, GitLab, Bitbucket, etc.).</description>
    <label>Doc Source</label>
    <nameField>
        <label>Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>