force-app/main/metadata/objects/Doc_Source__c/fields/Allow_Version_Switching__c.field-meta.xml
<CustomField>
    <fullName>Allow_Version_Switching__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, users can select different branches, tags, or releases to view documentation from different versions.</description>
    <inlineHelpText>Allow users to switch between branches/tags/releases</inlineHelpText>
    <label>Allow Version Switching</label>
    <type>Checkbox</type>
</CustomField>