force-app/main/metadata/objects/Doc_Source__c/fields/App_Identifier__c.field-meta.xml
<CustomField>
    <fullName>App_Identifier__c</fullName>
    <description>Unique identifier used by the LWC to find its configuration. Use lowercase with underscores (e.g., sales_docs, engineering_wiki).</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for this doc source. Use in your LWC configuration to connect to this source.</inlineHelpText>
    <label>App Identifier</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>