force-app/main/metadata/objects/Doc_Source__c/fields/Content_Path__c.field-meta.xml
<CustomField>
    <fullName>Content_Path__c</fullName>
    <description>The path within the repository where documentation content is stored. Leave blank to use the repository root.</description>
    <inlineHelpText>Path to docs folder (e.g., "docs/", "public/content/"). Leave blank for repo root.</inlineHelpText>
    <label>Content Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>