force-app/main/metadata/objects/Doc_Source__c/fields/Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Credential_Name__c</fullName>
    <label>Credential Name</label>
    <description>Name of the External Credential to use for authentication. Each unique name creates a separate credential store.</description>
    <inlineHelpText>Enter a unique name for this credential (e.g., "my_github", "acme_docs"). Different doc sources can share the same credential or use separate ones.</inlineHelpText>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>