force-app/main/metadata/objects/Doc_Source__c/fields/Default_Ref__c.field-meta.xml
<CustomField>
    <fullName>Default_Ref__c</fullName>
    <defaultValue>"main"</defaultValue>
    <description>The default Git reference (branch, tag, or commit SHA) to use when loading documentation.</description>
    <inlineHelpText>Default branch or tag (e.g., "main", "master", "v2.0.0")</inlineHelpText>
    <label>Default Ref</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>