force-app/main/metadata/objects/Doc_Source__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional description of this documentation source for administrative reference.</description>
    <inlineHelpText>Description for admin reference (not shown to end users)</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>