force-app/main/metadata/objects/Doc_Source__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this doc source will not be available to users.</description>
    <inlineHelpText>Uncheck to disable this doc source without deleting it.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>