force-app/main/metadata/objects/Doc_Source__c/fields/Repository_Name__c.field-meta.xml
<CustomField>
    <fullName>Repository_Name__c</fullName>
    <description>The name of the repository containing the documentation.</description>
    <inlineHelpText>Repository name (e.g., "documentation" or "company-wiki")</inlineHelpText>
    <label>Repository Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>