force-app/main/metadata/objects/Doc_Source__c/fields/Repository_Owner__c.field-meta.xml
<CustomField>
    <fullName>Repository_Owner__c</fullName>
    <description>The username or organization that owns the repository.</description>
    <inlineHelpText>Username or organization (e.g., "mycompany" or "johndoe")</inlineHelpText>
    <label>Repository Owner</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>